# office-doc-assistant

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  bot.py  llm.py  parser.py
tests/: test_parser.py
